2007-11-04  Kohei Yoshida  <kyoshida@novell.com>

	* source/ui/resmgr.cxx: set the current locale only after all string
	data are loaded, instead of setting it every time string value is
	queried.

2007-11-04  Kohei Yoshida  <kyoshida@novell.com>

	* source/inc/basedlg.hxx:
	* source/ui/basedlg.cxx: added setFocus() method to manually set focus 
	to the dialog, but this doesn't seem to work and no idea why.  also 
	added support to retain the dialog position when the dialog gets turned
	off and on.
	
	* source/ui/dialog.cxx: tried to set focus on the constraint dialog 
	after range selection is done.  But it still sets focus on the main
	solver dialog.

2007-10-31  Kohei Yoshida  <kyoshida@novell.com>

	* workben/addon_pkg/translation/en-US/license.txt:
	* workben/addon_pkg/license.txt: moved from the top location to the
	bottom.

	* source/inc/tool/global.hxx: turned off SCSOLVER_DEBUG flag.
	
	* source/numeric/lpsolve.cxx:
	* source/ui/dialog.cxx:
	* source/ui/solvemodel.cxx:
	* source/ui/xcalc.cxx: surrounded debug statements with 
	'#if SCSOLVER_DEBUG' to make it conditional.
	
	* workben/addon_pkg/description.xml: removed license files from non-
	en-US locales.
	
	* workben/addon_pkg/Makefile.in: package the new license.txt file.

	* workben/addon_pkg/translation/de/license.txt:
	* workben/addon_pkg/translation/en-GB/license.txt:
	* workben/addon_pkg/translation/es/license.txt:
	* workben/addon_pkg/translation/fr/license.txt: removed.

2007-10-31  Kohei Yoshida  <kyoshida@novell.com>

	* source/numeric/matrix.cxx: enable dynamic resize by default to prevent
	crash during LP solving.
	
	* source/numeric/matrix_test.cxx: explicitly disable dynamic resize for
	bad index testing.
	
	* source/ui/lpbuilder.cxx: enclose matrix assignment statements with try
	catch block to prevent crash in case assignment fails.
	
	* workben/addon_pkg/Makefile.in: link in the lpsolve static library for
	real.  This was also causing crash on solving a model.
