@@ -1,3 +1,10 @@
+2007-11-05  Kohei Yoshida  <kyoshida@novell.com>
+
+	* source/inc/basedlg.hxx:
+	* source/ui/basedlg.cxx:
+	* source/ui/dialog.cxx: use the position and size of the parent dialog
+	to compute an initial position of a dialog.
+
 2007-11-04  Kohei Yoshida  <kyoshida@novell.com>
 
 	* source/ui/resmgr.cxx: set the current locale only after all string
